--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.0",
+    "@rainbow-me/rainbowkit": "^2.1.0",
+    "@tanstack/react-query": "^5.51.0",
+    "axios": "^1.7.0",
+    "ethers": "^6.13.0",
+    "next": "^14.2.33",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@rainbow-me/rainbowkit": "^2.1.0",
-    "wagmi": "^2.7.0",
     "viem": "^2.7.0",
-    "@tanstack/react-query": "^5.51.0",
-    "ethers": "^6.13.0",
-    "axios": "^1.7.0"
+    "wagmi": "^2.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.0",
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.5.0"
   }
 }
-
