--- a/contracts/package.json
+++ b/contracts/package.json
@@ -10,11 +10,12 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.0"
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "hardhat": "^2.22.0",
+    "pino-pretty": "^13.1.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.0",
     "dotenv": "^16.4.5"
   }
 }
-
