--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^1.1.2",
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@rainbow-me/rainbowkit": "^2.1.0",
     "@tanstack/react-query": "^5.51.0",
     "axios": "^1.7.0",
     "ethers": "^6.13.0",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.556.0",
     "next": "^14.2.33",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-is": "^19.2.1",
+    "recharts": "^3.5.1",
     "viem": "^2.7.0",
     "wagmi": "^2.7.0"
   },
