coinbase integrations + paymaster

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_API_URL=http://localhost:8000
-NEXT_PUBLIC_HEDGE_REGISTRY_ADDRESS=0xABA833c0f1149C8E8EB5127e69a1B9671830ba20
-NEXT_PUBLIC_HEDGE_RECEIPT_NFT_ADDRESS=0x74A73A843d5dDDdd3E883959bC5Cc196BDb9069a
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=e7a5a23352f74f280ea9982747abfe64
+NEXT_PUBLIC_ONCHAINKIT_API_KEY=68c3dd75-00b8-4e58-8f7e-4ff48c27a529
+NEXT_PUBLIC_PAYMASTER_RPC_URL=https://api.developer.coinbase.com/rpc/v1/base/ZtCiazj3S1UdlP3rrqbn8X49vTlfBjIW
+NEXT_PUBLIC_RPC_URL=https://sepolia.base.org  # or your provider RPC
+NEXT_PUBLIC_HEDGE_REGISTRY_ADDRESS=0x9d54E1d84B6936430B6AF94D2A3F04457e7D37e0
+NEXT_PUBLIC_HEDGE_RECEIPT_NFT_ADDRESS=0x07Ac81F642A36839C535BC7786aDD6795443e342
