--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,19 +17,20 @@
     "ethers": "^6.13.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
-    "next": "^14.2.33",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "next": "16.1.0-canary.15",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-is": "^19.2.1",
     "recharts": "^3.5.1",
     "viem": "^2.7.0",
     "wagmi": "^2.7.0"
   },
   "devDependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.24.0",
+    "react-native": "0.82.1",
     "@types/node": "^20.14.0",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.0",
     "pino-pretty": "^13.1.3",
     "postcss": "^8.4.0",
